# madeye

./: .gitignore  AUTHORS  Makefile.am  configure.ac  configure.in  madeye.desktop  madeye_help.ini
.tx/: config
data/: Makefile.am  keymap.ini  keymap.v3.ini  madeye.ini  madeye.n516.ini  madeye.prs505.ini
debian/: changelog  control  copyright  rules
help/: Makefile.am  cs.po  de.po  en.po  es.po  madeye.pot  pl.po  ru.po  uk.po  zh_CN.po
help/madeye/cs/: index.help  madeye1.help  madeye2.help
help/madeye/de/: index.help  madeye1.help  madeye2.help
help/madeye/en/: index.help  madeye1.help  madeye2.help
help/madeye/es/: madeye1.help  madeye2.help
help/madeye/pl/: index.help  madeye1.help  madeye2.help
help/madeye/ru/: index.help  madeye2.help
help/madeye/uk/: index.help  madeye1.help  madeye2.help
help/madeye/zh_CN/: index.help  madeye1.help  madeye2.help
po/: Makefile.am  POTFILES  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  lv.po  madeye.desktop.in  madeye.pot  pl.po  ru.po  sv.po  uk.po  zh_CN.po
src/: Makefile.am  choicebox.cpp  database.cpp  database.h  dialogs.cpp  entrybox.cpp  keyboard.c  keyboard.h  keyhandler.cpp  madeye.c  madeye.cpp  madeye.h
themes/: Makefile.am  madeye.edc
