AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(madeye, 0.1)

AC_PROG_CC_C99
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(ECORE,[ecore])
PKG_CHECK_MODULES(ECORE_FILE,[ecore-file])
PKG_CHECK_MODULES(ECORE_EVAS,[ecore-evas])
PKG_CHECK_MODULES(EFREET_MIME,[efreet-mime])
PKG_CHECK_MODULES(EVAS,[evas])

AC_OUTPUT(Makefile src/Makefile data/Makefile)
